--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-maps": "^1.3.1",
     "react-native-paper": "^5.0.0-rc.5",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
