--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-maps": "^1.3.1",
+    "react-native-mask-input": "^1.2.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
