--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services' // <- Add this line
 
 //project.ext.vectoricons = [
 //    iconFontNames: ['MaterialIcons.ttf', 'EvilIcons.ttf']
