--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.0.2",
     "@react-native-firebase/app": "^16.1.1",
     "@react-native-firebase/auth": "^16.1.1",
     "@react-navigation/native": "^6.0.12",
