--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-svg": "^13.5.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-qr-code": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
